# network-programming-in-action

./: CMakeLists.txt  README.md  build.sh
01_base/: CMakeLists.txt  addr_convert.c  byte_order.c  get_hostname.c
02_echo/: CMakeLists.txt  echo_client.c  echo_server.c
03_tcp_stick_package/: CMakeLists.txt  read_line_client.c  read_line_server.c  read_package_client.c  read_package_server.c
04_process_per_connection/: CMakeLists.txt  ppc_server.c
05_thread_per_connection/: CMakeLists.txt  tpc_server.c
06_select/: CMakeLists.txt  select_client.c  select_server.c
07_poll/: CMakeLists.txt  poll_client.c  poll_server.c
08_epoll/: epoll_server.c
09_kqueue/: CMakeLists.txt  kqueue_server.c
doc/: 00_传输层简介.md  01_套接字编程基础.md  03_TCP粘包问题.md  04_TCP状态机.md  05_网络服务器程序设计方案.md  06_PPC与TPC.md  07_IO 复用：select与poll.md  08_IO 复用：epoll与kqueue.md  100_Socket API 操作系统差异.md  101_对象序列化.md  1_0_tcp_ip_model.md  1_1_get_started_socket_programming.md  1_2_tcp_echo_server.md  1_5_scoket_options.md  2_1_network_server_design.md  2_3_io_multiplexing_select_and_poll.md  2_4_io_multiplexing_epol_and_kqueue.md  2_5_io_multiplexing_epoll_and_kqueue.md
lib/: CMakeLists.txt  readline.c  readn.c  unp.h  wrapsock.c  wrapunix.c  writen.c
