PROJECT(NET)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)

ADD_SUBDIRECTORY(lib)
#ADD_SUBDIRECTORY(01_base)
#ADD_SUBDIRECTORY(02_echo)
#ADD_SUBDIRECTORY(03_tcp_stick_package)
#ADD_SUBDIRECTORY(04_process_per_connection)
ADD_SUBDIRECTORY(05_thread_per_connection)
ADD_SUBDIRECTORY(06_select)
ADD_SUBDIRECTORY(07_poll)